# tic-tac-toe-ai-embedded-spring2025

./: README.md  Tic_Tac_Toe_Game  cpp-ci.yml  howtoplay.cpp  howtoplay.h  howtoplay.ui  lastpositiondisplay.cpp  lastpositiondisplay.h  lastpositiondisplay.ui  main.cpp
Forms/: titlescreen.ui
View/: TitleScreen.cpp  TitleScreen.h  mainpage.cpp  mainpage.h  mainpage.ui  playerhistory.cpp  playerhistory.ui  profile.cpp  profile.ui  signup.cpp  signup.h  signup.ui
testprj/: CMakeLists.txt
testprj/src/: AIAgent.h  Board.cpp  Board.h  GameLogic.cpp  GameLogic.h  MiniMaxAgent.cpp  MiniMaxAgent.h  PlayerHistory.cpp  PlayerHistory.h
testprj/tests/: performance_test.cpp  test_board.cpp  test_game.cpp  test_minimaxagent.cpp  test_playerhistory.cpp
